# AgentForge

./: .env.example  .gitignore  BOUNTY.md  Dockerfile  Dockerfile.ghostfolio  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  cli.py  main.py
agent/config/: settings.py
agent/core/: agent.py  auth_middleware.py  cache.py  client.py  database.py  formatter.py  validators.py  verification.py
agent/static/: index.html
agent/tools/: __init__.py  accounts.py  auth.py  news.py  orders.py  portfolio.py  symbols.py  user.py
data/eval_datasets/: README.md  rubric.yaml  sample_queries.json
docker/: docker-compose.yml
docs/: architecture.md  cost-analysis.md  tutorial-building-finance-agent.md
scripts/: seed_data.py
tests/: conftest.py
tests/eval/: run_eval.py
tests/integration/: test_agent_e2e.py
tests/unit/: test_cache.py  test_client.py  test_formatter.py  test_news_tools.py  test_tools.py  test_validators.py  test_verification.py
